overflow fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -332,7 +332,6 @@ form > fieldset {
 
 .input-label {
   white-space: nowrap;
-  overflow: hidden;
   text-overflow: ellipsis;
 }
 
